# leadbot-studio

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py  studio_routes.py
app/connectors/: __init__.py  base.py  canadabuys_notice.py  competitor_registry.py  easytenders_notice.py  easytenders_search.py  environmental_expert_listing.py  europages_listing.py  go4worldbusiness_buyers.py  lead_registry.py  merx_notice.py  merx_search.py  mock_sources.py  rss_news.py  service_bund_search.py  source_registry.py  tasmania_tenders_listing.py  tenders_wa_listing.py  ungm_notice_search.py  vendorpanel_rss.py  web_search_leads.py
app/core/: __init__.py  config.py  llm_client.py  scheduler.py
app/data/: competitor_targets.json  lead_queries.json  leadbot_studio_manifest.json  news_sources.json  regional_procurement_sources.json
app/db/: models.py  session.py
app/jobs/: __init__.py  daily_briefing.py  weekly_lead_summary.py
app/services/: __init__.py  classifier.py  extractor.py  lead_archive.py  lead_archive_rollup.py  lead_deduper.py  notifier.py  public_contact_enricher.py  reporter.py  scorer.py
app/skills/: __init__.py  lead_generation.py  market_monitoring.py  report_generation.py
app/static/: group-event-community.html
app/studio/: __init__.py  proposals.py  runtime.py  schemas.py  service.py
app/ui/: __init__.py  console.html  (+1 more)
prompts/: score_lead.md  summarize_news.md  write_daily_report.md
tests/: test_config.py  test_studio_proposals.py  test_studio_runtime.py  test_studio_service.py  test_ui_console.py
(+6 files in other folders)
