[project]
name = "leadbot-studio"
version = "0.1.0"
description = "LeadBot Studio: an OpenClaw control-plane framework for coordinating specialist AgentBots."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "openai>=1.99.0,<2.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.11.2,<1.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
